findbugs:change for PERFORMANCE